# loophole

./: .gitignore  Dockerfile  README.md  config.yaml  pyproject.toml  sync-loophole-to-raid.sh  web_api.py
.github/workflows/: docker-hub.yml  docker.yml
examples/: dentist_chatbot.yaml  phatt-tech-principles.txt  privacy_principles.txt
loophole/: cost_tracker.py  deduplication.py  llm.py  main.py  models.py  persistence.py  prompts.py  session.py  visualize.py
loophole/agents/: base.py  judge.py  legislator.py  loophole_finder.py  overreach_finder.py  test_harness.py
loophole/chatbot/: main.py  prompts.py
loophole/chatbot/agents/: drafter.py
static/: index.html
static/css/: loophole.css
static/js/: loophole.js
tests/: test_harness.py  test_outside_voting.py
